--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,5 +26,5 @@
     <dimen name="space_normal">8dp</dimen>
     <dimen name="space_small">4dp</dimen>
 
-
+    <dimen name="float_width">700dp</dimen>
 </resources>
