--- a/app/src/main/res/layout/clipboard_act.xml
+++ b/app/src/main/res/layout/clipboard_act.xml
@@ -1,33 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/floating_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.englishlearn.myapplication.clipboard.ClipboardActivity">
+    tools:context=".clipboard.ClipboardActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <RelativeLayout
+        android:id="@+id/floating_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="@android:color/white">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <!-- 句子 -->
+        <EditText
+            android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"/>
 
-    </android.support.design.widget.AppBarLayout>
+        <!-- 译文 -->
+        <EditText
+            android:id="@+id/translation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/content"/>
 
-    <EditText
-        android:id="@+id/demotext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:editable="true"
-        android:text="@string/demo_text"/>
+        <!-- 句组 -->
+        <Spinner
+            android:id="@+id/sentencegroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/translation"></Spinner>
 
+        <!-- 添加 -->
+        <Button
+            android:id="@+id/add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sentencegroup"
+            android:onClick="onClick"
+            android:text="添加"/>
+        <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="helloword"/>-->
+       <!-- <FrameLayout
+            android:id="@+id/floating_dict_view_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-</LinearLayout>
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/white"
+            android:layout_alignRight="@+id/floating_dict_view_fragment">
+            </FrameLayout>-->
+    </RelativeLayout>
+
+</FrameLayout>
