--- a/app/src/main/res/layout/dict_popup_window.xml
+++ b/app/src/main/res/layout/dict_popup_window.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/floating_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgound_corners" >
@@ -12,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_margin="5dp"
         android:background="@null"
+        android:src="@drawable/close"
         android:contentDescription="@null"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
