--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
     <color name="search_matching">#44b712</color>
     <color name="sielkf">#44b712</color>
 
+  <color name="transparent">#0000</color>
 </resources>
